--- a/automation/src/automation/FxGUIlogin.fxml
+++ b/automation/src/automation/FxGUIlogin.fxml
@@ -8,12 +8,12 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="automation.FXGUI">
    <children>
       <SplitPane id="loginButtons" dividerPositions="0.4696969696969697" layoutX="200.0" layoutY="364.0" prefHeight="36.0" prefWidth="200.0">
          <items>
-            <Button id="loginButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="95.0" text="Login" />
-            <Button id="newUserButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="114.0" text="New User" />
+            <Button id="loginButton" mnemonicParsing="false" onAction= "#mainGUI" prefHeight="25.0" prefWidth="95.0" text="Login" />
+            <Button id="newUserButton" mnemonicParsing="false" onAction= "#newuserGUI" prefHeight="25.0" prefWidth="114.0" text="New User" />
          </items>
       </SplitPane>
       <PasswordField id="passwordTextField" layoutX="212.0" layoutY="200.0" prefHeight="25.0" prefWidth="187.0" />
