--- a/automation/src/automation/FxGUIlogin.fxml
+++ b/automation/src/automation/FxGUIlogin.fxml
@@ -7,18 +7,18 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="automation.FXGUI">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="automation.LoginController">
    <children>
       <SplitPane id="loginButtons" dividerPositions="0.4696969696969697" layoutX="200.0" layoutY="364.0" prefHeight="36.0" prefWidth="200.0">
          <items>
-            <Button id="loginButton" defaultButton="true" mnemonicParsing="false" onAction="#mainGUI" prefHeight="25.0" prefWidth="95.0" text="Login" />
-            <Button id="newUserButton" mnemonicParsing="false" onAction="#newuserGUI" prefHeight="25.0" prefWidth="114.0" text="New User" />
+            <Button fx:id="loginButton" defaultButton="true" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="25.0" prefWidth="95.0" text="Login" />
+            <Button fx:id="newUserButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="114.0" text="New User" />
          </items>
       </SplitPane>
-      <PasswordField id="passwordTextField" layoutX="212.0" layoutY="200.0" prefHeight="25.0" prefWidth="187.0" />
+      <PasswordField fx:id="passwordTextField" layoutX="212.0" layoutY="200.0" prefHeight="25.0" prefWidth="187.0" />
       <Label layoutX="157.0" layoutY="204.0" prefHeight="17.0" prefWidth="55.0" text="Password" />
       <Label layoutX="157.0" layoutY="164.0" prefHeight="17.0" prefWidth="55.0" text="Username" />
-      <TextField id="usernameTextField" layoutX="212.0" layoutY="160.0" prefHeight="25.0" prefWidth="187.0" />
+      <TextField fx:id="usernameTextField" layoutX="212.0" layoutY="160.0" prefHeight="25.0" prefWidth="187.0" />
       <Label layoutX="229.0" layoutY="78.0" prefHeight="36.0" prefWidth="142.0" text="Auto Routine">
          <font>
             <Font size="24.0" />
