--- a/automation/src/automation/FxGUIlogin.fxml
+++ b/automation/src/automation/FxGUIlogin.fxml
@@ -24,6 +24,7 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <Label layoutX="278.0" layoutY="121.0" prefHeight="25.0" prefWidth="45.0" text="Login" />
+      <Label layoutX="278.0" layoutY="130.0" prefHeight="25.0" prefWidth="45.0" text="Login" />
+      <Label fx:id="incorrectUsername" layoutX="209.0" layoutY="114.0" textFill="#e13c13" />
    </children>
 </AnchorPane>
