--- a/src/main/java/automation/src/automation/FxGUInewuser.fxml
+++ b/src/main/java/automation/src/automation/FxGUInewuser.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="automation.NewUserController">
    <children>
-      <Button fx:id="createNewUser" layoutX="248.0" layoutY="344.0" mnemonicParsing="false" text="Create New User" />
+      <Button fx:id="createNewUser" layoutX="248.0" layoutY="344.0" mnemonicParsing="false" onAction="#createNewUser" text="Create New User" />
       <Label layoutX="232.0" layoutY="71.0" text="Create New User Account" />
       <Label layoutX="163.0" layoutY="120.0" text="Username" />
       <Label layoutX="165.0" layoutY="218.0" text="Password" />
